# fad-checker

./: .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  CRITICAL-REVIEW.md  README.md  fad-check.js  fad-checker.js  package-lock.json  package.json
completions/: fad-check.bash  fad-check.zsh  fad-checker.bash  fad-checker.zsh
data/: cpe-coord-map.json  cwe-names.json  eol-mapping.json  known-obsolete.json  known-public-namespaces.json
docs/: ARCHITECTURE.md  USAGE.md  demo.tape  index.html
lib/: cache-archive.js  config.js  core.js  cpe.js  csaf-export.js  cve-download.js  cve-match.js  cve-report.js  dep-record.js  deps-descriptor.js  embedded.js  epss.js  gate.js  json-export.js  kev.js  license-policy.js  manifest-copy.js  maven-bom.js  maven-license.js  maven-repo.js  maven-version.js  nvd.js  options-env.js  osv.js  outdated.js  parallel-walk.js  path-filter.js  priority.js  purl.js  retire.js  sarif-export.js  sbom-export.js  scan-completeness.js  snyk.js  suppress.js  transitive.js  ui.js  unmanaged.js  version-overlay.js
test/: anonymized-cli.test.js  binary-codec.test.js  binary-fixture.test.js  binary-pipeline-skip.test.js  binary-registry.test.js  binary-sniff.test.js  cli-repos.test.js  cli-safety.test.js  codec-capabilities.test.js  codec-edge-cases.test.js  codec-integration.test.js  codec-registries.test.js  codecs.test.js  composer.test.js  core.test.js  cpe.test.js  csaf-export.test.js  cve-download.test.js  cve-match.test.js  cve-report.test.js  (+39 more)
test/fixtures/python-poetry-src/: pyproject.toml
test/fixtures/python-pyproject/: pyproject.toml
(+87 files in other folders)
