[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myapp"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "requests==2.31.0",
    "flask>=2.0",                       # range -> skipped
    "zope.interface==6.0",              # normalized name
    "django[bcrypt]==4.2.1 ; python_version>='3.10'",
]

[project.optional-dependencies]
dev = ["pytest==7.4.0", "black>=23.0"]  # pytest pinned (dev), black range skipped
docs = ["sphinx==7.2.0"]
extra = ["numpy==1.26.0"]               # non-dev optional group -> prod
